<resources>
    <string name="app_name">Fit for Life</string>
    <string name="title_settings">Настройки</string>
    <string name="keep_screen_on">Не выключать экран</string>
    <string name="update_automatically">Обновлять автоматически</string>
    <array name="update_times">
        <item>15 минут</item>
        <item>30 минут</item>
        <item>1 час</item>
    </array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="add_new_entries">Добавить новые записи</string>
    <string name="history_of_entries">История записей</string>
    <string name="pedometer">Шагометр</string>
    <string name="settings">Настройки</string>
    <string name="dont_have_entries">Здесь будет выводиться история Ваших записей приёмов пищи. Вы ещё ни разу не добавляли записи</string>


    <string name="notification_subtitle">Подсчёт Ваших шагов…</string>
    <string name="started">Шагометр включен</string>
    <string name="steps">Шаги</string>
    <string name="kilometers">Километры</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">Шагов в минуту</string>
    <string name="kilometers_per_hour">Км в час</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">Калорий сожжено</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <!-- Settings -->
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <!--<string name="keep_screen_on">Screen on (keep screen dim)</string>-->
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="quit">Quit</string>
    <string name="hint_description">Добавляйте продукты питания из Вашего рациона и сохраняйте историю Вашего здорового питания!</string>
    <string name="are_you_sure_delete_all_history">Вы уверены, что хотите очистить всю Вашу историю записей?</string>
    <string name="your_history_has_removed_successfully">Ваша история записей была успешно очищена</string>
    <string name="are_you_sure_delete_this_entry">Вы уверены, что хотите удалить запись?</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="firebase_database_name">users_history</string>
    <string name="press_for_open_details_info">Нажмите, чтобы открыть подробную информацию</string>
    <string name="tell_about_us">Поделиться приложением</string>
</resources>
