<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_new_entries"
            android:icon="@drawable/ic_playlist_add"
            android:title="@string/add_new_entries" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_of_entries" />
        <item
            android:id="@+id/pedometer"
            android:icon="@drawable/ic_pedometer"
            android:title="@string/pedometer" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Рассказать об успехах друзьям" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Поделиться приложением" />
        </menu>
    </item>

</menu>
